correting layout bugs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,6 @@
     --green: #A3BD36;
     --light-green: rgb(180, 212, 53);
     --light-grey: #f5f5f5;
-    --toastify-color-progress-light :#A3BD36;
 }
 
 tr, td, th {
